# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.533 2006/01/26 23:17:16 wolf31o2 Exp $

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh:
  Added patch from bug #120475 that resolves HFS blessing on PPC*. This is
  2.0_rc24.

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  +livecd/cdtar/isolinux-elilo-memtest86+-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh:
  Added initial support for EFI booting on x86. This is completely untested,
  so use it at your own risk. Also, no bug reports without patches, please.
  This is catalyst 2.0_rc23.

  26 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh:
  kmerge should have been kerncache

  26 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh,
  targets/support/pre-kmerge.sh:
  Fix a few other places for the kerncache update

  26 Jan 2006; Eric Edgar <rocket@gentoo.org>
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot2_template.spec,
  examples/netboot_template.spec, examples/stage4_template.spec,
  examples/tinderbox_template.spec, modules/generic_stage_target.py,
  targets/support/kmerge.sh:
  Separation of kerncache from snapcache

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  It helps if I actually increment the version number.

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh:
  Added --oneshot to default options for stage1 building. Added code to wipe
  world during stages 1 and 3. This is catalyst 2.0_rc22.

  25 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/bootloader-setup.sh: